--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 import '../styles/global.css';
 
 const pageTitle = "Home Page";
 ---
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -13,10 +14,14 @@ const pageTitle = "Home Page";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-        <a href="/about/">About</a>
-		<a href="/blog">Blog</a>
+		<Header />
 
 		<h1>{pageTitle}</h1>
+
+		<Footer />
+		
+		<script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
